--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,7 +1,32 @@
+openmediavault (2.1.4) stable; urgency=low
+
+  * Update locales.
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Jul 2015 19:22:21 +0200
+
+openmediavault (2.1.3) stable; urgency=low
+
+  * Update locales.
+  * Switch off insecure SSL ciphers in the nginx WebGUI configuration.
+  * Mantis 0001367: Firewall
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 21 Jul 2015 8:33:05 +0200
+
 openmediavault (2.1.2) stable; urgency=low
 
+  * Update locales.
+  * Various improvements.
+  * Do not allow to edit system user/group accounts via WebGUI.
+  * Add APT hook infrastructure. Drop your scripts in
+    - /etc/apt/pre-invoke.d
+    - /etc/apt/post-invoke.d
+    - /etc/apt/update-pre-invoke.d
+    - /etc/apt/update-post-invoke.d
+    - /etc/apt/update-post-invoke-success.d
   * Mantis 0001365: Ability to add/remove system users to user created groups.
   * Mantis 0001368: User password changes field 'E-Mail'.
+  * Mantis 0001369: Checkboxes in Dashboard.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Jul 2015 07:14:16 +0200
 
